sub group multi select values hiding

--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -296,6 +296,7 @@ html.platformWindows {
 @import "./dataview/file";
 @import "./dataview/filter";
 @import "./dataview/group";
+@import "./dataview/subgroup";
 @import "./dataview/object";
 @import "./dataview/option";
 @import "./dataview/relation";
