--- a/src/scss/block/dataview/view/board.scss
+++ b/src/scss/block/dataview/view/board.scss
@@ -12,11 +12,16 @@
 				.swimlaneHead {
 					padding: 12px 16px; cursor: pointer; display: flex; align-items: center; border-radius: 8px 8px 0px 0px;
 					border-bottom: 1px solid var(--color-shape-tertiary);
-				}
-				.swimlaneHead:hover { background: var(--color-shape-highlight-light); }
-				.swimlaneHead {
+
 					.sides { display: flex; width: 100%; align-items: center; }
-					.side.left { display: flex; align-items: center; gap: 0px 8px; width: 100%; }
+					.side.left { display: flex; align-items: center; gap: 0px 8px; flex: 1; }
+					.side.right { display: flex; align-items: center; flex-shrink: 0; }
+
+					.side.right .icon.more {
+						width: 24px; height: 24px; background-size: 20px; border-radius: 4px;
+						background-image: url('~img/icon/menu/action/more0.svg'); opacity: 0; cursor: default;
+					}
+					.side.right .icon.more:hover, .side.right .icon.more.active { background-color: var(--color-shape-highlight-medium); }
 
 					.icon.arrow {
 						width: 20px; height: 20px; flex-shrink: 0; background-image: url('~img/arrow/select/dark.svg');
@@ -36,6 +41,8 @@
 						background: var(--color-shape-tertiary); border-radius: 4px; padding: 2px 6px;
 					}
 				}
+				.swimlaneHead:hover { background: var(--color-shape-highlight-light); }
+				&:hover .swimlaneHead .side.right .icon.more { opacity: 1; }
 
 				.swimlaneBody { padding: 8px 8px 16px 8px; overflow-x: auto; }
 				.swimlaneBody {
