"no value" default swimlane title

--- a/src/scss/component/cell.scss
+++ b/src/scss/component/cell.scss
@@ -52,6 +52,10 @@
 	.empty { display: inline-block; white-space: nowrap; }
 }
 
+.cellContent.withPlaceholder {
+	.empty { display: inline-block; white-space: nowrap; }
+}
+
 .cellContent.c-checkbox { display: flex; flex-direction: row; align-items: center; gap: 0px 2px; }
 .cellContent.c-checkbox {
 	.icon { width: 20px; height: 20px; background-image: url('~img/icon/dataview/checkbox0.svg'); }
