--- a/src/scss/block/dataview/view/board.scss
+++ b/src/scss/block/dataview/view/board.scss
@@ -6,12 +6,13 @@
 		.viewContent.viewBoard {
 
 			/* Swimlanes (sub-group vertical sections) */
-			.swimlanes { display: flex; flex-direction: column; gap: 16px 0px; margin-right: 80px; }
+			.swimlanes { display: flex; flex-direction: column; gap: 16px 0px; margin-right: 80px; padding-left: 24px; }
 			.swimlane { border-radius: 8px; }
 			.swimlane {
 				.swimlaneHead {
 					padding: 12px 16px; cursor: pointer; display: flex; align-items: center; border-radius: 8px 8px 0px 0px;
 					border-bottom: 1px solid var(--color-shape-tertiary);
+					position: relative;
 
 					.sides { display: flex; width: 100%; align-items: center; }
 					.side.left { display: flex; align-items: center; gap: 0px 8px; flex: 1; }
@@ -30,14 +31,20 @@
 					.icon.arrow.expanded { transform: rotate(0deg); }
 
 					.icon.dnd {
-						width: 20px; height: 20px; background-image: url('~img/icon/dnd.svg');
-						background-size: 20px; cursor: grab; opacity: 0; flex-shrink: 0;
+						width: 12px; height: calc(100% - 24px); cursor: grab; opacity: 0;
+						position: absolute; left: -20px; top: 12px;
+						border: 1px solid var(--color-shape-secondary); border-radius: 6px;
 						transition: opacity $transitionCommon;
-						position: relative; right: auto; top: auto; border: none;
-						background-color: transparent;
+					}
+					.icon.dnd:hover {
+						background-color: var(--color-shape-tertiary);
+						border-color: var(--color-shape-tertiary);
+						background-image: url('~img/icon/block/menu.svg');
+						background-size: 2px 12px;
+						background-position: center;
+						background-repeat: no-repeat;
 					}
 					.icon.dnd:active { cursor: grabbing; }
-					.icon.dnd:hover { background-color: transparent; border-color: transparent; }
 
 					.cellContent { display: inline-flex; align-items: center; font-weight: 500; color: var(--color-text-primary); }
 					.cellContent {
