--- a/src/scss/block/dataview/view/board.scss
+++ b/src/scss/block/dataview/view/board.scss
@@ -10,7 +10,7 @@
 			.swimlane { border-radius: 8px; }
 			.swimlane {
 				.swimlaneHead {
-					padding: 12px 16px; cursor: pointer; display: flex; align-items: center; border-radius: 8px 8px 0px 0px;
+					padding: 12px 8px; cursor: pointer; display: flex; align-items: center; border-radius: 8px 8px 0px 0px;
 					border-bottom: 1px solid var(--color-shape-tertiary);
 					position: relative;
 
@@ -25,7 +25,7 @@
 					.icon.more:hover, .icon.more.active { background-color: var(--color-shape-highlight-medium); }
 
 					.icon.arrow {
-						width: 20px; height: 20px; flex-shrink: 0; background-image: url('~img/arrow/select/dark.svg');
+						width: 20px; height: 20px; flex-shrink: 0; background-image: url('~img/arrow/select/light.svg');
 						transform: rotate(-90deg); transition: transform $transitionCommon;
 					}
 					.icon.arrow.expanded { transform: rotate(0deg); }
@@ -58,7 +58,6 @@
 						background: var(--color-shape-tertiary); border-radius: 4px; padding: 2px 6px;
 					}
 				}
-				.swimlaneHead:hover { background: var(--color-shape-highlight-light); }
 				&:hover .swimlaneHead .icon.more { opacity: 1; }
 				&:hover .swimlaneHead .icon.dnd { opacity: 1; }
 
